# Chatbot-project

./: .gitignore  README.md  main.py  pyproject.toml
data/: hatbot_model.keras
src/: __init__.py  gui_chatbot.py  train_chatbot.py
